// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Select control data resolves when value is one: resolvedValue 1`] = `"one"`;

exports[`Page Select control data resolves when value is one: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {},
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": "one",
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Select control data resolves when value is three: resolvedValue 1`] = `"three"`;

exports[`Page Select control data resolves when value is three: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {},
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": "three",
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Select control data resolves when value is two: resolvedValue 1`] = `"two"`;

exports[`Page Select control data resolves when value is two: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {},
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": "two",
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Select control data resolves when value is undefined: resolvedValue 1`] = `undefined`;

exports[`Page Select control data resolves when value is undefined: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {},
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": undefined,
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page resolves value when defaultValue is set: resolvedValue 1`] = `"two"`;

exports[`Page resolves value when defaultValue is set: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {},
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": undefined,
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;
